# ai_forex_system

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  ANALYSIS.md  Dockerfile  Makefile  README.md  backtest_jan_apr_2026_results.json  commit_msg.txt  config.yaml  conftest.py  dashboard.html  dashboard_fine_tuned.html  dashboard_improvements.html  docker-compose.yml  dynamic_position_sizing.py  fine_tune_models.py  fly.toml  health_check.py  index.html  main.py  monte_carlo_simulation.py  opencode.json  package-lock.json  pyproject.toml  pytest.ini  quick_walk_forward.py  refresh_ctrader_token.py  refresh_ctrader_token.sh  requirements.txt  setup.py  signals_20260430_0341.json  signals_20260430_0346.json  signals_20260430_0350.json  signals_live.json  sim_fine_tuned.py  sim_icmarkets_results.json  sim_jan_mar_2026_results.json  sim_ml_results.json  (+11 more)
.github/workflows/: ci.yml  deploy-pages.yml  scheduled_retrain.yml
.opencode/agents/: architect.md  coder.md  engineer.md  master.md  optimizer.md  planner.md  reviewer.md  tester.md
config/: ctrader_config.json  ctrader_real_config.json
docs/: completion.md  ctrader_macos_solution.md  engineering_analysis.md
models/: ensemble_config.json  feature_norm.npz  lstm_cnn_model.keras  meta_learner.pt  meta_learner_best.pt  signal_registry.json
notebooks/: analysis.ipynb
scripts/: ctrader_ic_markets_setup.md  ic_markets_signals.py  live_trading.py  oauth_helper.py  run_walk_forward_ci.py  setup_ctrader.py  setup_ctrader_oauth.py  train_all_pairs.py
src/: __init__.py  main.py  main_v2.py
src/agentic/: _check_all.py  _check_dataflow.py  _check_gaps.py  _diagnose_ai.py  _fix_ai.py  _run_live.py  _run_simulation.py  _test_lifecycle.py  _test_telegram.py  _trace_deps.py  _verify.py  _verify_all.py  main_agentic.py
src/agents/: __init__.py  adaptive_risk.py  data_agent.py  position_manager.py  trade_manager.py
src/ai/: __init__.py  alpha_research.py  alternative_data.py  behavioral_sentiment.py  distributional_rl.py  foundation_models.py  maml_agent.py  maml_scaler.py  master_orchestrator.py  regime_agents.py  rl_agent.py  sentiment.py  sentiment_azure.py  social_scrapers.py  tft_model.py
src/ai_forex_system/: __init__.py  backtest.py  dashboard.py  data.py  model.py  trader.py
src/api/: __init__.py  base.py  ctrader_client.py  ctrader_data_only.py  ctrader_env.py  ctrader_final.py  ctrader_fix.py  ctrader_fixed.py  ctrader_fixed_final.py  (+18 more)
tests/: conftest.py  test_ai_models.py  test_causal_features.py  test_config.py  test_ctrader_env.py  test_ctrader_ssl.py  test_data.py  test_dukascopy_integration.py  test_execution_engine.py  test_features.py  test_integration.py  test_integration_signal_pipeline.py  test_live_mode_path.py  test_model.py  test_pipeline_integration_smoke.py  test_risk.py  test_risk_manager.py  test_services.py  test_smoke_imports.py  test_vectorized_backtester.py
(+260 files in other folders)
