[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rts_ai_fx_trading"
version = "3.0"
description = "RTS: Agentic FX System Elite"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.3.0",
    "numpy>=1.26.4,<2.0.0",
    "scikit-learn>=1.6.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "ta-lib>=0.6.0",
    "yfinance>=1.2.0",
    "ccxt>=4.5.0",
    "tensorflow>=2.15.0,<2.16.0",
    "torch>=2.0.0",
    "ctrader-open-api>=0.9.2",
    "twisted>=24.3.0",
    "service-identity>=24.2.0",
    "requests>=2.32.0",
    "aiohttp>=3.9.0",
    "cloudscraper>=1.2.71",
    "feedparser>=6.0.0",
    "transformers>=4.30.0",
    "hmmlearn>=0.3.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "websockets>=15.0.0",
    "redis>=5.0.0",
    "pyyaml>=6.0.0",
    "joblib>=1.3.0",
    "loguru>=0.7.0",
]

[tool.black]
line-length = 88

[tool.flake8]
max-line-length = 88
ignore = ["E203", "W503"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
show_error_codes = true
exclude = "(_archive/|.venv|venv|build|\\.eggs|\\.git)"

# Suppress low-risk / false-positive categories
disable_error_code = [
    "import-untyped",
    "import-not-found",
    "annotation-unchecked",
    "no-any-return",     # returns from untyped libs — low runtime risk
    "var-annotated",     # missing type hints on empty containers — harmless
    "operator",          # numpy/pandas ExtensionArray — mostly false positives
    "call-overload",     # pd.to_numeric overload mismatch — false positives
    "return-value",      # return type inference noise with pandas
    "index",             # indexing noise with Optional/Union types
    "call-arg",          # false positives with dataclass constructors
    "arg-type",          # numpy/pandas stub limitations
    "misc",              # diverse low-risk mismatches
    "no-redef",          # try/except import fallback patterns
]

[tool.pytest.ini_options]
norecursedirs = ["_archive", ".venv", "venv", "build", "dist"]
filterwarnings = [
    "ignore:urllib3 v2 only supports OpenSSL:urllib3.exceptions.NotOpenSSLWarning",
]
